# OPTRIA-IQ-

./: .gitignore  .replit  ARCHITECTURE.md  ARCHITECTURE_RULES.md  DB_SCHEMA.md  DEPLOYMENT_FIXES.md  OPS_INTEGRATION_VERIFICATION.md  OPS_RUNBOOK.md  PLATFORM_ENGINEERING_REPORT.md  PROJECT_PLAN.md  README.md  SUMMARY.md  TENANT_ONBOARDING.md  config.py  cookies.txt  main.py  pyproject.toml  render.yaml  replit.md  requirements.txt
attached_assets/: Pasted--Replit-Master-Prompt-OPTRIA-IQ-Optimization-Platform-w_1764863581304.txt  Pasted-I-need-a-full-detailed-engineering-level-summary-report_1764867233425.txt  Pasted-I-see-that-the-core-platform-Digital-Twin-and-integrati_1765042203435.txt  Pasted-ROLE-You-are-the-FastAPI-Jinja2-architect-working-on-th_1765047716064.txt  Pasted-You-are-Replit-Agent-3-multi-agent-Architect-Backend-Fr_1764863389294.txt  Pasted-You-are-Replit-s-multi-agent-team-Architect-Backend-Fro_1764865405579.txt  Pasted-You-are-a-senior-platform-engineer-working-on-OPTRIA-IQ_1765031741280.txt  Pasted-You-are-the-Replit-multi-agent-team-Architect-Backend-F_1764948934818.txt  Pasted-You-are-the-multi-agent-Replit-assistant-working-on-the_1765043574223.txt  Pasted-You-are-the-principal-backend-architecture-engineer-on-_1765132098080.txt  Pasted-You-are-the-principal-engineer-for-the-OPTRIA-IQ-projec_1764866665885.txt  Pasted-You-are-working-inside-an-existing-production-ready-OPT_1765021707037.txt  Pasted-You-are-working-on-the-OPTRIA-IQ-project-FastAPI-Jinja2_1765046887949.txt  (+4 more)
core/: __init__.py  ai_service.py  auth.py  blackbox_engine.py  rbac.py  (+3 more)
(+56 files in other folders)
